--- a/config.ini
+++ b/config.ini
@@ -8,6 +8,7 @@ INPUT_FILE = ./data/generated.csv
 
 [MODEL]
 FEATURES_COUNT = 10000
-TF_PATH =
-IDF_PATH =
-WATCHED_PATH =
+TF_PATH = ./models/TF_MODEL
+IDF_PATH = ./models/IDF_MODEL
+WATCHED_PATH = ./models/WATCHED
+IDF_FEATURES_PATH = ./models/IDF_FEATURES
