some comments added

--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,7 @@ NUM_PARTITIONS =
 
 [DATA]
 INPUT_FILE = ./data/generated.csv
+SOURCE_URL = https://raw.githubusercontent.com/jenyanorilsk/mle_2_homework/develop/data/generated.csv
 
 [MODEL]
 FEATURES_COUNT = 10000
