--- a/config.ini
+++ b/config.ini
@@ -4,8 +4,8 @@ NUM_EXECUTORS = 1
 NUM_PARTITIONS =
 
 [DATA]
-INPUT_FILE = ./data/generated.csv
-SOURCE_URL = https://raw.githubusercontent.com/jenyanorilsk/mle_2_homework/develop/data/generated.csv
+INPUT_FILE = ./data/trainx16x32_0.csv
+SOURCE_URL = 
 
 [MODEL]
 FEATURES_COUNT = 10000
