big file url added to config

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ NUM_PARTITIONS =
 
 [DATA]
 INPUT_FILE = ./data/trainx16x32_0.csv
-SOURCE_URL = 
+SOURCE_URL = http://localhost/data/trainx16x32_0.csv
 
 [MODEL]
 FEATURES_COUNT = 10000
