--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,11 @@
 [SPARK]
 NUM_PROCESSORS = 3
 NUM_EXECUTORS = 1
-NUM_PARTITIONS =
+NUM_PARTS = 40
 
 [DATA]
 INPUT_FILE = ./data/trainx16x32_0.csv
-SOURCE_URL = http://localhost/data/trainx16x32_0.csv
+SOURCE_URL = http://192.168.56.1/data/trainx16x32_0.csv
 
 [MODEL]
 FEATURES_COUNT = 10000
