--- a/CI/Jenkinsfile
+++ b/CI/Jenkinsfile
@@ -67,7 +67,7 @@ pipeline {
                 dir("mle_2_homework") {
                         bat encoding: 'UTF-8', script: '''
                             chcp 65001
-                            docker-compose -f docker-compose-ID.yml up -d
+                            docker-compose -f docker-compose-CI.yml up -d
                             for /f %%i in ('docker ps -qf "name=^mle_2_homework_app_1"') do set containerId=%%i
                             echo %containerId%
                             IF "%containerId%" == "" (
@@ -81,7 +81,7 @@ pipeline {
             }
         }
 
-        stage('Checkout coverage report'){
+        stage('Checkout run report'){
             steps{
                 dir("mle_2_homework"){
                     bat encoding: 'UTF-8', script: '''
