--- a/config.ini
+++ b/config.ini
@@ -4,8 +4,8 @@ NUM_EXECUTORS = 1
 NUM_PARTS = 40
 
 [DATA]
-INPUT_FILE = ./data/trainx16x32_0.csv
-SOURCE_URL = http://192.168.56.1/data/trainx16x32_0.csv
+INPUT_FILE = ./data/generated.csv
+SOURCE_URL = http://192.168.56.1/data/generated.csv
 
 [MODEL]
 FEATURES_COUNT = 10000
